# plugin_hub

./: README.md
.github/workflows/: deploy.yml
00 - Template/: Cargo.toml
00 - Template/src/: lib.rs
01 - Hooks/: Cargo.toml
01 - Hooks/src/: lib.rs
02 - APIs/: Cargo.toml
02 - APIs/src/: lib.rs
beginner/: GUIDE.md  hide-the-combat-UI-feature.md
doc/: README.md  book.toml
doc/src/: SUMMARY.md  ch01-01-installation.md  ch01-02-hello-world.md  ch02-00-skyline-plugins.md  ch02-01-analyzing-template.md  ch02-01-template.md  ch03-00-ghidra.md  ch03-00-skyline-plugins.md  ch03-01-set-up-ghidra.md  ch03-02-start-with-ghidra.md  ch03-03-analyzing-a-function.md  ch04-00-rust-intro.md  ch04-01-crates.md  ch04-02-unity.md  ch04-03-engage.md  ch04-04-cobapi.md  ch04-05-basic-example-01.md  ch04-06-basic-example-02.md  ch04-07-basic-example-03.md  introduction.md
