[package]
name = "api"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0"
engage = { version = "0.2.0", git = "https://github.com/DivineDragonFanClub/engage" } # Contains a set of functions and utilities to call the game's code.
unity = { version = "0.2.0", git = "https://github.com/DivineDragonFanClub/unity" } # Utilities to talk with Unity internals. You usually wouldn't need it unless what you want isn't in the engage crate.
cobapi = { version = "0.1.0", git = "https://github.com/DivineDragonFanClub/cobapi" } # Utilities to talk with Cobalt.

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
